<resources>
    <string name="app_name">To-Do List App</string>
    <string name="task_name">Task Name</string>
    <string name="due_date">Due Date</string>
    <string name="save">SAVE</string>
    <string name="your_to_do_list">Your To-Do List</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">id</string>
    <string name="nulls">null</string>
    <string name="add_account">Add Account</string>
    <string name="list_user">List user</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="join_as_a_guest">Join as a guest</string>
    <string name="upload_image">Upload Image</string>
    <string name="logout">logout</string>
    <string name="default_notification_channel_id">tes</string>
    <string name="title">Title</string>
    <string name="coba_push_notification_fcm">Coba Push Notification - FCM</string>
    <string name="short_message">Short Message</string>
    <string name="send_notification">Send Notification</string>
    <string name="fachmi_dimas_ardhana">Fachmi Dimas Ardhana</string>
    <string name="device_id">Device ID</string>
    <string name="to_do_list_app">To Do List App</string>
    <string name="desc">We Can Organized and Keep All of Your Task</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="select_time">Select Time</string>
    <string name="cancel_alarm">Cancel Alarm</string>
</resources>