<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="56dp"
    android:gravity="center_vertical"
    tools:context=".activity.AlarmManagerActivity">

    <TextView
        android:id="@+id/tvTimeAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="09:00"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btnSelectTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/select_time"/>

    <Button
        android:id="@+id/btnSetAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/set_alarm"/>

    <Button
        android:id="@+id/btnCancelAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_alarm"/>

</LinearLayout>