<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:padding="48dp"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="24dp"
        app:boxCornerRadiusBottomStart="24dp"
        app:boxCornerRadiusTopEnd="24dp"
        app:boxCornerRadiusTopStart="24dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="24dp"
        app:boxCornerRadiusBottomStart="24dp"
        app:boxCornerRadiusTopEnd="24dp"
        app:boxCornerRadiusTopStart="24dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"/>

    <com.google.android.material.button.MaterialButton
        android:visibility="gone"
        android:layout_marginTop="8dp"
        android:id="@+id/btnJoinGuest"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_as_a_guest"/>

</LinearLayout>