<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@color/teal_200"
    android:gravity="center_vertical"
    tools:context=".activity.FormCloudMessagingActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:text="@string/coba_push_notification_fcm"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="24dp"
        app:boxCornerRadiusBottomStart="24dp"
        app:boxCornerRadiusTopEnd="24dp"
        app:boxCornerRadiusTopStart="24dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/etTitleNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="24dp"
        app:boxCornerRadiusBottomStart="24dp"
        app:boxCornerRadiusTopEnd="24dp"
        app:boxCornerRadiusTopStart="24dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/etMessageNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/short_message"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:id="@+id/btnSendNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_notification"/>

</LinearLayout>