<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_vertical"
    tools:context=".activity.UsersActivity">

    <TextView
        android:visibility="gone"
        android:id="@+id/tvDeviceID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_gravity="center_horizontal"
        android:id="@+id/civProfilePhoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        tools:src="@tools:sample/avatars" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUploadImage"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/upload_image"/>

    <TextView
        android:id="@+id/tvIdUserActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text=""/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="24dp"
        app:boxCornerRadiusBottomStart="24dp"
        app:boxCornerRadiusTopEnd="24dp"
        app:boxCornerRadiusTopStart="24dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="24dp"
        app:boxCornerRadiusBottomStart="24dp"
        app:boxCornerRadiusTopEnd="24dp"
        app:boxCornerRadiusTopStart="24dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="24dp"
        app:boxCornerRadiusBottomStart="24dp"
        app:boxCornerRadiusTopEnd="24dp"
        app:boxCornerRadiusTopStart="24dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/boxDeviceId"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="24dp"
        app:boxCornerRadiusBottomStart="24dp"
        app:boxCornerRadiusTopEnd="24dp"
        app:boxCornerRadiusTopStart="24dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDeviceID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:clickable="false"
            android:focusable="false"
            android:hint="@string/device_id" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCreateUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:text="@string/save"/>


</LinearLayout>