<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:layout_marginTop="8dp"
    android:layout_marginStart="2dp"
    android:layout_marginEnd="2dp"
    app:cardElevation="20dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">

        <CheckBox
            android:id="@+id/cbTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:shadowColor="@color/black" />

        <TextView
            android:id="@+id/tvIdTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/id"/>

        <LinearLayout
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNamaTask"
                android:layout_width="match_parent"
                android:maxLines="3"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/task_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDueDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/due_date"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_baseline_edit_24"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@drawable/ic_baseline_delete_24"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>